--- a/notebooks/01_data_import.ipynb
+++ b/notebooks/01_data_import.ipynb
@@ -1,6 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "db660269",
+   "metadata": {},
+   "source": [
+    "# Smart City Energy Data — Data Import & Initial Exploration\n",
+    "\n",
+    "This notebook is part of the **Smart City IoT / Smart Grid Data Analytics** project.  \n",
+    "Its main purpose is to:\n",
+    "\n",
+    "- Import all required Python libraries for data analysis\n",
+    "- Load the enriched smart grid dataset from a CSV file\n",
+    "- Validate that the file path is correct\n",
+    "- Perform a quick structural check of the data (shape, columns, data types)\n",
+    "- Provide a clean and reusable starting point for downstream notebooks (cleaning, EDA, modeling)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1. Environment Setup & Library Imports\n",
+    "In this section, we load the core data analysis libraries (Pandas, NumPy, Matplotlib, Seaborn) and configure display options to make tables and plots easier to work with.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dabc1333",
+   "metadata": {},
+   "source": [
+    "### 1.1 Import core libraries\n",
+    "\n",
+    "The following cell:\n",
+    "\n",
+    "- Imports the standard libraries used throughout the project\n",
+    "- Suppresses non-critical warnings\n",
+    "- Sets display options to show more rows/columns in Pandas DataFrames\n",
+    "\n",
+    "This setup is shared across multiple notebooks in the project to keep behavior consistent.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "fa99c0b9-69f8-4291-8bec-e43a2dff827d",
@@ -34,6 +72,26 @@
     "pd.set_option('display.width', None)\n",
     "\n",
     "print(\"Libraries loaded successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0737b17e",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## 2. Configure Input File Path\n",
+    "\n",
+    "In some environments (e.g. running locally on your own laptop), the CSV file path can be different for each user.  \n",
+    "The next cell:\n",
+    "\n",
+    "- Asks the user to input the **full path** to the CSV file\n",
+    "- Trims unnecessary quotes and spaces\n",
+    "- Prints the final path so it can be visually confirmed\n",
+    "\n",
+    "> 💡 Tip:  \n",
+    "> On Windows, you can copy the full path from File Explorer by clicking on the address bar and pressing `Ctrl + C`.\n"
    ]
   },
   {
@@ -74,42 +132,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "087d9189",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Please enter the full path to your CSV file:  C:\\0_DA\\Iot_DataAnalyst\\smart_grid_dataset_city_hourly_enriched.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Path you entered:\n",
-      "C:\\0_DA\\Iot_DataAnalyst\\smart_grid_dataset_city_hourly_enriched.csv\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "50e975d9",
+   "metadata": {},
    "source": [
-    "# =============================================================================\n",
-    "# 2. ENTER CSV FILE PATH\n",
-    "# =============================================================================\n",
+    "---\n",
     "\n",
-    "csv_path = input(\"Please enter the full path to your CSV file: \")\n",
+    "## 3. Load the CSV file and Inspect Basic Structure\n",
     "\n",
-    "# Clean the path\n",
-    "csv_path = csv_path.strip().replace('\"', \"\").replace(\"'\", \"\")\n",
+    "Once the `csv_path` is confirmed, we:\n",
     "\n",
-    "print(\"\\nPath you entered:\")\n",
-    "print(csv_path)"
+    "1. Read the CSV file into a Pandas DataFrame `df`\n",
+    "2. Print:\n",
+    "   - Number of rows and columns\n",
+    "   - Column names\n",
+    "   - Data types of each column\n",
+    "3. Display the first few rows to get a feeling for the dataset.\n",
+    "\n",
+    "This step verifies that:\n",
+    "- The file exists and can be read without errors\n",
+    "- The structure of the data matches expectations for the Smart City energy dataset\n"
    ]
   },
   {
@@ -422,6 +464,24 @@
     "# Show column names\n",
     "print(\"\\nColumn names:\")\n",
     "print(df.columns.tolist())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e98bb23b",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## 4. Next Steps\n",
+    "\n",
+    "From here, you can:\n",
+    "\n",
+    "- Proceed to a **data cleaning** notebook (handling missing values, outliers, type conversions)\n",
+    "- Start an **exploratory data analysis (EDA)** notebook (distributions, correlations, time series patterns)\n",
+    "- Build **feature engineering** and **modeling** notebooks on top of this imported dataset.\n",
+    "\n",
+    "This notebook is intentionally focused only on **robust, reproducible data import**, so that other notebooks can safely assume that `df` is already loaded and ready to use.\n"
    ]
   }
  ],
