Implement all local changes

--- a/notebooks/clean.ipynb
+++ b/notebooks/clean.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "30014d6c-3a7a-4c0b-9581-507b2a04c6dc",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "47aaca4a-37d6-4b3a-90f9-8e7c9ab20ab9",
    "metadata": {},
    "outputs": [
@@ -87,44 +87,65 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "CONFIGURATION LOADED – Using Relative Paths\n",
+      "CONFIGURATION LOADED – Using System-Independent Relative Paths\n",
       "================================================================================\n",
-      "[INFO] Project root:       /Users/rebekaqueen2025/Documents/Alfa_training/Data_analyst/iot-energy_data-analyst\n",
-      "[INFO] Input file:         /Users/rebekaqueen2025/Documents/Alfa_training/Data_analyst/iot-energy_data-analyst/data/raw/smart_grid_dataset_city_modified.csv\n",
-      "[INFO] Output folder:      /Users/rebekaqueen2025/Documents/Alfa_training/Data_analyst/iot-energy_data-analyst/outputs/2_result_cleaned_datasets\n"
+      "[INFO] Project root:      /Users/rebekaqueen2025/Documents/Alfa_training/Data_analyst/iot-energy_data-analyst\n",
+      "[INFO] Input file:        /Users/rebekaqueen2025/Documents/Alfa_training/Data_analyst/iot-energy_data-analyst/data/raw/smart_grid_dataset_city_modified.csv\n",
+      "[INFO] Output folder:     /Users/rebekaqueen2025/Documents/Alfa_training/Data_analyst/iot-energy_data-analyst/outputs/2_result_cleaned_datasets\n",
+      "[INFO] Timestamp:         20251210_103144\n"
      ]
     }
    ],
    "source": [
     "# =============================================================================\n",
-    "# 1. CONFIGURATION (RELATIVE PATH VERSION)\n",
+    "# 1. CONFIGURATION\n",
     "# =============================================================================\n",
     "\n",
     "import os\n",
     "from datetime import datetime\n",
     "\n",
     "print(\"=\" * 80)\n",
-    "print(\"CONFIGURATION LOADED – Using Relative Paths\")\n",
+    "print(\"CONFIGURATION LOADED – Using System-Independent Relative Paths\")\n",
     "print(\"=\" * 80)\n",
     "\n",
-    "# Get project root folder (one level above \"notebooks\")\n",
+    "# ------------------------------------------------------------\n",
+    "# PROJECT ROOT (one level above notebooks folder)\n",
+    "# ------------------------------------------------------------\n",
     "PROJECT_ROOT = os.path.dirname(os.getcwd())\n",
     "\n",
-    "# Input file (relative to project root)\n",
-    "INPUT_FILE = os.path.join(PROJECT_ROOT, \"data\", \"raw\", \"smart_grid_dataset_city_modified.csv\")\n",
+    "# ------------------------------------------------------------\n",
+    "# INPUT FILE (auto-detected based on project structure)\n",
+    "# ------------------------------------------------------------\n",
+    "INPUT_FILE = os.path.join(\n",
+    "    PROJECT_ROOT,\n",
+    "    \"data\",\n",
+    "    \"raw\",\n",
+    "    \"smart_grid_dataset_city_modified.csv\"\n",
+    ")\n",
     "\n",
-    "# Output folder for cleaned datasets\n",
-    "OUTPUT_FOLDER = os.path.join(PROJECT_ROOT, \"outputs\", \"2_result_cleaned_datasets\")\n",
+    "# ------------------------------------------------------------\n",
+    "# OUTPUT FOLDER for CLEANED DATASETS\n",
+    "# ------------------------------------------------------------\n",
+    "OUTPUT_FOLDER = os.path.join(\n",
+    "    PROJECT_ROOT,\n",
+    "    \"outputs\",\n",
+    "    \"2_result_cleaned_datasets\"\n",
+    ")\n",
     "\n",
-    "# Create folder if it doesn't exist\n",
+    "# Create output folder if missing\n",
     "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
     "\n",
-    "print(f\"[INFO] Project root:       {PROJECT_ROOT}\")\n",
-    "print(f\"[INFO] Input file:         {INPUT_FILE}\")\n",
-    "print(f\"[INFO] Output folder:      {OUTPUT_FOLDER}\")\n",
+    "# Unique timestamp for saved cleaned datasets\n",
+    "timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
     "\n",
-    "# Timestamp for exported files\n",
-    "timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n"
+    "# ------------------------------------------------------------\n",
+    "# Print information for debugging and confirmation\n",
+    "# ------------------------------------------------------------\n",
+    "print(f\"[INFO] Project root:      {PROJECT_ROOT}\")\n",
+    "print(f\"[INFO] Input file:        {INPUT_FILE}\")\n",
+    "print(f\"[INFO] Output folder:     {OUTPUT_FOLDER}\")\n",
+    "print(f\"[INFO] Timestamp:         {timestamp}\")\n",
+    "\n"
    ]
   },
   {
@@ -138,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "e69e1e6f-c497-4ace-82cf-861cec49d4a9",
    "metadata": {},
    "outputs": [
@@ -189,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "d50aaa14-e344-4a2b-9119-fbf8458a11d9",
    "metadata": {},
    "outputs": [
@@ -294,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "ce6f3359-5755-4f14-91c9-889b4c2bd8a6",
    "metadata": {},
    "outputs": [
@@ -343,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "d14d6288-a9d9-40e5-9994-b7aa9f23bd95",
    "metadata": {},
    "outputs": [
@@ -389,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "bb86bc06-b6ce-4fb5-b2c9-e6e0214d02d4",
    "metadata": {},
    "outputs": [
@@ -461,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "6d1c6ba8-35a1-4928-b1b6-4d18fccdac55",
    "metadata": {},
    "outputs": [
@@ -505,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "26b15232-1d29-454b-ad84-6f96433389a9",
    "metadata": {},
    "outputs": [
@@ -562,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "988654ea-23f3-410e-b446-45f02d98619d",
    "metadata": {},
    "outputs": [
@@ -608,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "07cdf4cd-6ff7-4012-99d8-ab58604a801f",
    "metadata": {},
    "outputs": [
@@ -651,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "17c799b5-f0ac-4c8f-b5db-650349a2b98d",
    "metadata": {},
    "outputs": [
@@ -707,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "8bed186d-0d1d-4d9a-b5e8-0c178216cb82",
    "metadata": {},
    "outputs": [
@@ -719,8 +740,8 @@
       "================================================================================\n",
       "[STEP 11] SAVING RESULTS\n",
       "================================================================================\n",
-      "[SUCCESS] Cleaned data saved at: /Users/rebekaqueen2025/Documents/Alfa_training/Data_analyst/iot-energy_data-analyst/outputs/2_result_cleaned_datasets/cleaned_data_20251209_132819.csv\n",
-      "[SUCCESS] Report saved at: /Users/rebekaqueen2025/Documents/Alfa_training/Data_analyst/iot-energy_data-analyst/outputs/2_result_cleaned_datasets/cleaning_report_20251209_132819.txt\n"
+      "[SUCCESS] Cleaned data saved at: /Users/rebekaqueen2025/Documents/Alfa_training/Data_analyst/iot-energy_data-analyst/outputs/2_result_cleaned_datasets/cleaned_data_20251210_103144.csv\n",
+      "[SUCCESS] Report saved at: /Users/rebekaqueen2025/Documents/Alfa_training/Data_analyst/iot-energy_data-analyst/outputs/2_result_cleaned_datasets/cleaning_report_20251210_103144.txt\n"
      ]
     }
    ],
